# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

18-Jun-2012 Jean-Marie Simonet
 # [#28685] Edit article Button missing after upgrade to the latest version 2.5.5 from 2.5.4. Thanks Mark
 $ [#28695] *Lang string missing
 # [#28694] *Delete toolbar broken in com_media in 2.5.5
 # [#28702] 404 Hits of com_redirect fails after Manual update. Thanks Mark

18-June-2012 Mark Dexter
 + Add update xml files to build folder
 # [#28554] Mark JXMLElement as deprecated and don't use it in type hinting
 # [#28650] Use legacy aliases for the MVC in the site

-------------------- 2.5.5 Stable Release [18-June-2012] ------------------

17-Jun-2012 Jean-Marie Simonet
 $ Updating installation ini file zh-CN

17-Jun-2012 Christophe Demko
 ^ [#28643] Backport JApplicationBase and some minor fixes from the platform. (Rouven Weßling)

16-Jun-2012 Mark Dexter
 # [#27267] Multiple Loggers fail when using formattedtext (Shaun Maunder)
 # [#28411] Site breaks when deleting alternate style which is in use (Christophe Demko)
 # [#27737] Clean up the unit tests (Rouven Weßling)

16-Jun-2012 Christophe Demko
 # [#28673] JSON data returned when uploading oversized file (Jonathan Chang)

16-Jun-2012 Jean-Marie Simonet
 $ Updating installation ini file pl-PL
 ^ [#28644] Move JApplicationHelper::parseXMLInstallFile to JInstaller. Thanks Rouven.
 ^ [#28649] Backport small changes to the MVC from the platform. Thanks Rouven

15-Jun-2012 Christophe Demko
 # [#28670] SQL error when installing trunk without sample data (Ofer Cohen)

15-Jun-2012 Jean-Marie Simonet
 $ Updating installation ini file sy-IQ + missing strings in en-AU, en-US and gu-IN
 + [#28629] Multi-File Upload. Thanks Elijah
 $ Updating installation ini files: af-ZA, be-BY, el-GR, gl-ES, he-IL
 + [#28617] Add buttons in each menu selection tab in the module admin manager. Thanks Mathieu
 # [#28592] Language in component folder. Thanks Lao

14-Jun-2012 Christophe Demko